Fix layout on firefox

--- a/enrolment/static/sass/landing-page.scss
+++ b/enrolment/static/sass/landing-page.scss
@@ -129,6 +129,7 @@ a .register-interest-btn {
   }
 }
 .ipad-intro-txt {
+  clear: both;
   font-size: 24px;
   line-height: 1.2;
   max-width: 80%;
